Add the unit files necessary to have systemd start loader.

--- a/anaconda.spec.in
+++ b/anaconda.spec.in
@@ -207,6 +207,7 @@ update-desktop-database &> /dev/null || :
 %doc docs/install-methods.txt
 %doc docs/mediacheck.txt
 %doc docs/anaconda-release-notes.txt
+/lib/systemd/system/*
 /lib/udev/rules.d/70-anaconda.rules
 %{_sbindir}/anaconda
 %{_sbindir}/logpicker
