--- a/configure.ac
+++ b/configure.ac
@@ -283,6 +283,7 @@ AC_CONFIG_FILES([Makefile
                  data/icons/hicolor/48x48/apps/Makefile
                  data/icons/hicolor/256x256/Makefile
                  data/icons/hicolor/256x256/apps/Makefile
+                 data/systemd/Makefile
                  po/Makefile.in
                  scripts/Makefile
                  pyanaconda/Makefile
