--- a/data/systemd/loader.service
+++ b/data/systemd/loader.service
@@ -1,12 +1,12 @@
 [Unit]
 Description=The anaconda loader
-Requires=dbus.service udev.service rsyslog.service
-After=dbus.service udev.service rsyslog.service
+Requires=dbus.service udev.service rsyslog.service tmp.mount
+After=dbus.service udev.service rsyslog.service tmp.mount
 
 [Service]
-Environment=HOME=/
+Environment=HOME=/root MALLOC_CHECK_=2 MALLOC_PERTURB_=204 PATH=/usr/bin:/bin:/sbin:/usr/sbin:/mnt/sysimage/bin:/mnt/sysimage/usr/bin:/mnt/sysimage/usr/sbin:/mnt/sysimage/sbin PYTHONPATH=/tmp/updates TERM=linux
 Type=oneshot
-WorkingDirectory=/
+WorkingDirectory=/root
 ExecStart=/sbin/loader
 StandardInput=tty-force
 KillMode=process-group
