Take out the part about anaconda being of little use (#677522).
The more stuff we make depend on anaconda (s-c-kickstart, storage testing,
livecd-creator, etc.) as a module, the more important it becomes to have
installed.

--- a/anaconda.spec.in
+++ b/anaconda.spec.in
@@ -162,7 +162,7 @@ Obsoletes: booty
 
 %description
 The anaconda package contains the program which was used to install your
-system.  These files are of little use on an already installed system.
+system.
 
 %prep
 %setup -q
