--- a/anaconda.spec.in
+++ b/anaconda.spec.in
@@ -229,6 +229,74 @@ update-desktop-database &> /dev/null || :
 %endif
 
 %changelog
+* Tue Mar 01 2011 Chris Lumens <clumens@redhat.com> - 16.0-1
+- Pass correct class to super in SELinuxFS.mountable. (#677450) (dlehman)
+- Clarify that loader method entries are looking for a tree. (clumens)
+- Fix up remaining anaconda.id references (#680296) (bcl)
+- Wipe out pre-existing problems before running transaction (#678201, pmatilai). (clumens)
+- Attempt at fixing reboot behavior in kickstart (#676968). (clumens)
+- brcm_iscsiuio is not in Fedora yet, handle that you can't find it. (akozumpl)
+- Fix downloading .treeinfo files for --noverifyssl repos. (akozumpl)
+- Fix syntax error from 0bf0cf13. (akozumpl)
+- Pass --force when calling vgreduce --removemissing. (#679206) (dlehman)
+- Only apply global passphrase to devices with no passphrase. (#679223) (dlehman)
+- Perform terminations before unmounting filesystems on shutdown. (dlehman)
+- Get size + summary from yum package object instead of callback key (pmatilai)
+- Test for stringiness instead of explicit rpm.hdr class in install callback (pmatilai)
+- Remove unused doneFiles counting from transaction callback (pmatilai)
+- Handle nfsiso in promptForNfs as well (#678413). (clumens)
+- If the umount in getFileFromNfs fails, log it. (clumens)
+- Correct the return values of some backend base class methods. (#679107) (dlehman)
+- Change xhost auth when doing a liveinst (#663294) (bcl)
+- Override kernel cmdline updates (bcl)
+- Write --noverifyssl to repos and urls in kickstart where fit. (akozumpl)
+- Do all dm handling inside addUdevDMDevice. (#672030) (dlehman)
+- Remove storage/miscutils.py, it is not used. (akozumpl)
+- Be better at handling killed metacity. (akozumpl)
+- Remove Dispatcher.firstStep. (akozumpl)
+- remove InstallerControllerWindow.setup_theme() (akozumpl)
+- Make the dispatcher call the shots. (akozumpl)
+- icw._doExit is now icw.close() (akozumpl)
+- remove trailing whitespace from gui.py and installclass.py (akozumpl)
+- gui: remove ics.setScreenNext() and ics.getScreenNext(). (akozumpl)
+- Clean up vg name generator and default to "vg_image" in image installs. (dlehman)
+- Fix calculation of md array spare count. (dlehman)
+- createSuggestedVGName takes a hostname, not a Network instance. (dlehman)
+- Show correct device path in PV create progress window. (dlehman)
+- VNC does not support runtime SecurityTypes changes (#678150) (mgracik)
+- Support cciss devices in get_sysfs_path_by_name(). (akozumpl)
+- Don't clear partition 1 from mac disks even if it has no name. (#674105) (dlehman)
+- Handle quotes around labels and UUIDs in /etc/fstab. (#670496) (dlehman)
+- Clean up a bunch of exception handling code. (dlehman)
+- Don't show loaderSegvHandler or its glibc entry point in tracebacks. (pjones)
+- The default kickstart UI is graphical, specify other if you want it (#678095). (clumens)
+- Only check for the addons of enabled repos (#677773). (clumens)
+- Fix build - add Makefiles for new unittests to configure.ac (wwoods)
+- Fix a thinko when setting up the base repo for NFSISO (#676821). (clumens)
+- Take out the part about anaconda being of little use (#677522). (clumens)
+- Fix loading translations in loader (#677648). (clumens)
+- Don't always attempt to load updates on kickstart installs (#677131). (clumens)
+- s390x has firstboot now (dcantrell)
+- Don't fail on missing %includes during loader kickstart processing (#676940). (clumens)
+- Prompt for media check on DVD installs (#676551). (clumens)
+- Tighten the focus of the dogtail and X try/except blocks. (dlehman)
+- Stop overriding ext[234] filesystem defaults. (dlehman)
+- Make Storage function in the absence of an Anaconda instance. (dlehman)
+- Fix DeviceTree to function in the absence of an InstallInterface. (dlehman)
+- Remove some udev hackery that was only needed for two-stage env. (dlehman)
+- Move large anaconda.__main__ tasks into functions. (dlehman)
+- Generate locale files on request (msivak)
+- Fix up tests for changes in split media handling (wwoods)
+- Update unit testing targets in Makefile.am (tmlcoch)
+- Add new tests from the unittests branch (tmlcoch)
+- Fix open method in mock/disk.py. (tmlcoch)
+- Improve of mock/disk.py. (tmlcoch)
+- Remove the old suite() crud from kickstart testing, python-nose work differenlty (msivak)
+- Tag tests as slow or acceptance tests and split full testing from devel unit testing (msivak)
+- Mock _isys and block modules in fw test. They are not needed. (msivak)
+- In text mode we have to treat strings and lists separately while printing them (#676942) (msivak)
+- Fix some whitespace errors in iscsi kickstart code. (pjones)
+
 * Thu Feb 10 2011 Chris Lumens <clumens@redhat.com> - 15.20-1
 - Check for valid mountpoint before unmounting image. (#671922) (dlehman)
 - Fix mis-management of luks dict when renaming encrypted lvs. (dlehman)
