BuildRequires transifex-client
(cherry picked from commit 4f0dc0679223ae32fb56f180ba19f81a13e30206)

--- a/anaconda.spec.in
+++ b/anaconda.spec.in
@@ -76,6 +76,7 @@ BuildRequires: python-nose
 BuildRequires: rpm-devel
 BuildRequires: rpm-python >= %{rpmpythonver}
 BuildRequires: slang-devel >= %{slangver}
+BuildRequires: transifex-client
 BuildRequires: xmlto
 BuildRequires: yum >= %{yumver}
 BuildRequires: zlib-devel
