--- a/anaconda.spec.in
+++ b/anaconda.spec.in
@@ -229,6 +229,14 @@ update-desktop-database &> /dev/null || :
 %endif
 
 %changelog
+* Mon Mar 21 2011 Chris Lumens <clumens@redhat.com> - 15.24-1
+- Revert "Changes for NetworkManager API 0.9" (clumens)
+- Update icons and add a new 256x256 version (#689014). (clumens)
+- Fix order of opts and host when processing kickstart nfs lines. (clumens)
+- Log running version number as soon as possible (bcl)
+- Fix setting of loaderData->method from repo= cmdline option (#684402).
+  (rvykydal)
+
 * Mon Mar 14 2011 Chris Lumens <clumens@redhat.com> - 15.23-1
 - iscsi: use the --target parameter from the iscsi kickstart command.
   (akozumpl)
